<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Lab 7</string>
    <string name="message">Look at my GUI</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="edit_text">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackbar_checkbox">The Check Box is now</string>
    <string name="snackbar_switch">The switch is now</string>
    <string name="checkbox">Check this out!</string>
    <string name="switch_mess">Switch on / off</string>
    <string name="undo">Undo</string>
    <string name="textEmail">Enter your email address:</string>
    <string name="textPassword">Type your password:</string>
    <string name="typeEmail">Type email here</string>
    <string name="login">LOGIN</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="email">Your email:</string>
    <string name="enterEmail">Enter your email</string>
    <string name="enterName">Enter your name</string>
    <string name="picture">Your picture:</string>
    <string name="click">Click the button above to take a picture</string>
    <string name="GoToChatText">Go To Chat</string>
    <string name="SendText">Send</string>
    <string name="ReceiveText">Receive</string>
    <string name="ChatHint">Type here</string>
    <string name="receiver">My best friend</string>
    <string name="GoToWeather">Go To Weather</string>
    <string name="currentTemp">Current temp</string>
    <string name="minTemp">Min Temp</string>
    <string name="maxTemp">Max Temp</string>
    <string name="UV">Uv Rating</string>
    <string name="messfragment"> Message Here</string>
    <string name="IDtext"> ID= </string>
    <string name="hideButton"> HIDE </string>
    <string name="isSENDmess"> Is a Send Message </string>
</resources>

