<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:id="@+id/fragmentLocation"
    android:background="#ff77"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messfragment"
        android:id="@+id/messfragment"/>


    <TextView
        android:id="@+id/IDtext"
        android:text="@string/IDtext"
        android:textSize="30dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/messfragment"
        />

    <CheckBox
        android:textSize="30dp"
        android:id="@+id/isSENDmess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messfragment"
        android:layout_marginTop="31dp"
        android:text="@string/isSENDmess" />

    <Button
        android:textSize="30dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/hideButton"
        android:id="@+id/hideButton"/>


</RelativeLayout>