<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/message"
        android:textSize="30sp" />

    <Button
        android:id="@+id/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:text="@string/ButtonText"
        tools:ignore="UnknownId" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/myButton"
        android:layout_alignParentLeft="false"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/myButton"
        android:text="@string/checkbox" />

    <ImageButton
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myButton"
        android:layout_alignParentLeft="true"
        android:src="@drawable/flag"
        tools:ignore="RtlHardcoded" />

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox"
        android:layout_alignParentLeft="false"

        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="-10dp"
        android:layout_toRightOf="@+id/image"
        android:text="@string/switch_mess" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="2dp"
        android:hint="@string/edit_text"
        android:inputType="textPersonName" />

</RelativeLayout>