<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/message"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/myButton"
            android:layout_weight="1"
            android:gravity="fill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ButtonText" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_weight="1"
            android:gravity="fill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/checkbox"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/image"
            android:layout_weight="1"
            android:gravity="fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/flag" />

        <Switch
            android:id="@+id/mySwitch"
            android:layout_weight="1"
            android:gravity="fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_mess"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:inputType="textPersonName|textCapWords" />
    </LinearLayout>


</LinearLayout>